--- a/Project 1.ipynb
+++ b/Project 1.ipynb
@@ -17,17 +17,8 @@
     }
    },
    "source": [
-    "# MATH 210 Assignment 1\n",
-    "\n",
-    "### Instructions\n",
-    "\n",
-    "* There are 4 problems and 20 total points.\n",
-    "* Write your solutions in the cells below.\n",
-    "* You may work on these problems with others but you must write your solutions on your own.\n",
-    "* **Do not import** any Python packages such as `math` or `numpy` to complete this assignment.\n",
-    "* Execute the test cells to verify that your solutions pass.\n",
-    "* **This notebook contains hidden tests!** Your solution may not be completely correct even if it passes all tests below.\n",
-    "* Submit this notebook to Canvas before **11:59pm Friday September 20**."
+    "# Assignment 1\n",
+    
    ]
   },
   {
