Update and rename assignment1.ipynb to Project 1.ipynb

--- a/Project 1.ipynb
+++ b/Project 1.ipynb
@@ -17,7 +17,7 @@
     }
    },
    "source": [
-    "# MATH 210 Assignment 1\n",
+    "# Project 1\n",
     "\n",
     "### Instructions\n",
     "\n",
