Update and rename assignment3.ipynb to Project 3.ipynb

--- a/Project 3.ipynb
+++ b/Project 3.ipynb
@@ -4,17 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# MATH 210 Assignment 3\n",
-    "\n",
-    "### Instructions\n",
-    "\n",
-    "* There are 4 problems and 20 total points.\n",
-    "* Write your solutions in the cells below.\n",
-    "* You may work on these problems with others but you must write your solutions on your own.\n",
-    "* Use NumPy, SciPy and Matplotlib.\n",
-    "* Execute the test cells to verify that your solutions pass.\n",
-    "* **Grading includes hidden tests!** Your solution may not be completely correct even if it passes all tests below.\n",
-    "* Submit this notebook to Canvas before **11:59pm Friday October 18**"
+    "# Project 3\n"
    ]
   },
   {
